# PostureAndWaterIntelligentReminder

./: .gitignore  README.md  config.json  plan-alertaCopoDeAguaPosturaInteligente.prompt.md  plan.md  pyproject.toml  requirements.txt
data/: messages.json
src/: main.py  tray.py
src/config/: settings.py
src/monitor/: activity_tracker.py  idle_detector.py
src/notifications/: messages.py  notifier.py
tests/: test_activity_tracker.py  test_idle_detector.py  test_integration.py  test_notifier.py  test_settings.py
