[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-reminder"
version = "2.2.0"
description = "Alerta de Copo de Água e Postura Inteligente - Monitoriza atividade e envia lembretes"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pynput>=1.7.6",
    "plyer>=2.1.0",
    "pystray>=0.19.5",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
intelligent-reminder = "src.main:main"
